# ontology-projrct-neo4j

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  setup.bat
cypher/: 00_schema.cypher  ai_001_005.cypher  ai_001_010.cypher  ai_001_050.cypher  ai_051_100.cypher  ai_101_134.cypher  al_001_044.cypher  ca_001.cypher  ca_001_050.cypher  ca_051_100.cypher  ca_101_150.cypher  ca_151_176.cypher  db_001_010.cypher  db_001_050.cypher  db_051_100.cypher  db_101_150.cypher  db_151_179.cypher  ds_001_022.cypher  mg_001_050.cypher  mg_051_100.cypher  mg_101_150.cypher  mg_151_200.cypher  mg_201_201.cypher  nw_001_010.cypher  nw_001_050.cypher  nw_051_100.cypher  nw_101_150.cypher  nw_151_200.cypher  nw_201_250.cypher  nw_251_286.cypher  os_001_050.cypher  os_051_067.cypher  pm_001_050.cypher  pm_051_094.cypher  se_001_010.cypher  se_001_050.cypher  se_051_100.cypher  se_101_150.cypher  se_151_200.cypher  se_201_250.cypher  (+22 more)
docs/03-analysis/: neo4j-mcp-agent.analysis.md
docs/04-report/: neo4j-mcp-agent.report.md
system-docs/: 프로젝트_완료_보고서.md
textbook/: 00_목차.md
textbook/Part1_기초/: 01_그래프DB와_Neo4j_입문.md  (+1 more)
tools/: .gitignore  PLAN.md  README.md  cli.py  config.py  pyproject.toml  run_mcp.py
tools/agent/: llm.py  prompts.py  tutor.py
tools/analyze/: analyze_questions_legacy.py
tools/app/: app.py
tools/app/components/: sidebar.py
tools/extract/: extractor.py
tools/generate/: cypher_generator.py
tools/graphrag/: searcher.py
tools/load/: loader.py
tools/neo4j_mcp/: GUIDE.md  server.py
tools/parse/: doc_parser.py  docx_parser.py  text_parser.py
(+25 files in other folders)
